try max memory for gradle tests